--- a/src/components/Story/story.scss
+++ b/src/components/Story/story.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   background-attachment: fixed;
   position: relative;
+
   &::before {
     content: "";
     width: 100%;
@@ -12,18 +13,22 @@
     backdrop-filter: blur(5px);
     filter: brightness(0.5);
   }
+
   .container {
     padding: 1rem 0rem 9rem 0rem;
   }
+
   .image-block {
     p {
       color: rgba($color: #fff, $alpha: 0.8);
     }
+
     p.caption {
       color: #000000;
       display: inline-block;
       position: relative;
       font-weight: 400;
+
       .before {
         background-color: rgba(171, 139, 101, 1);
         content: "";
@@ -36,6 +41,7 @@
       }
     }
   }
+
   .blockquote {
     p {
       font-size: 3rem;
@@ -43,17 +49,28 @@
       color: #ffffff;
     }
   }
+
   .btn {
     border: none;
     box-shadow: none;
     border-radius: 15px;
     padding: 10px 20px;
+
     &.btn-outline-primary {
       color: #fff;
+
       &:hover {
         color: #000000;
         background-color: rgba(255, 255, 255, 0.8);
       }
+    }
+  }
+}
+
+.light {
+  .story {
+    &::before {
+      filter: brightness(0.5) invert(0.7);
     }
   }
 }
