--- a/src/components/TimeLine/TimeLine.scss
+++ b/src/components/TimeLine/TimeLine.scss
@@ -1,13 +1,17 @@
 .timeline {
   min-height: 80vh;
+
   .dot-label {
     font-size: 0.9rem;
     color: #aaaaaa;
   }
+
   .content {
     margin: 10rem 0rem;
+
     .media {
       align-items: center;
+
       &:hover {
         .media-left {
           svg {
@@ -15,6 +19,7 @@
             color: rgba(171, 139, 101, 1);
           }
         }
+
         .media-body {
           h1 {
             &:nth-child(2) {
@@ -25,24 +30,32 @@
           }
         }
       }
+
       .media-left {
         margin-right: 50px;
         position: relative;
         height: 100%;
         z-index: -1;
+
         svg {
           transition: 200ms;
         }
       }
+
       .media-body {
         position: relative;
+
         h1 {
+          font-family: 'Anybody',
+            cursive;
+
           &:nth-child(2) {
             z-index: -1;
             position: absolute;
             color: transparent;
             left: 30px;
             top: -30px;
+
             &::before {
               position: absolute;
               content: "";
@@ -54,14 +67,17 @@
         }
       }
     }
+
     h1 {
       font-size: 4rem;
       display: inline-block;
       position: relative;
     }
+
     p {
       font-size: 1.1rem;
       color: #959595;
+
       a {
         color: #959595;
       }
@@ -80,6 +96,7 @@
               color: rgba(171, 139, 101, 1);
             }
           }
+
           .media-body {
             h1 {
               &:nth-child(2) {
@@ -90,17 +107,18 @@
             }
           }
         }
+
         .media-left {
           svg {
             color: rgba($color: #898989, $alpha: 1);
           }
         }
+
         .media-body {
           h1 {
             &:nth-child(2) {
               &::before {
-                box-shadow: inset 0 0 10px 100px
-                  rgba($color: #898989, $alpha: 1);
+                box-shadow: inset 0 0 10px 100px rgba($color: #898989, $alpha: 1);
               }
             }
           }
@@ -121,6 +139,7 @@
               color: rgba(171, 139, 101, 1);
             }
           }
+
           .media-body {
             h1 {
               &:nth-child(2) {
@@ -131,11 +150,13 @@
             }
           }
         }
+
         .media-left {
           svg {
             color: rgba($color: #555, $alpha: 1);
           }
         }
+
         .media-body {
           h1 {
             &:nth-child(2) {
