--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,8 @@
   font-weight: 600;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@800;900&family=Croissant+One&display=swap');
+
 body {
   margin: 0;
   padding: 0;
@@ -56,22 +58,28 @@ body {
   overflow-x: hidden;
   background-color: #f5f5f5;
 }
-#root > div {
+
+#root>div {
   &.dark {
     color: #ffffff;
     background-color: rgba(12, 12, 12, 1);
+
     .position-sticky {
       background-color: rgba(34, 34, 34, 0.95);
     }
+
     .primary {
       color: #ffffff;
     }
   }
+
   &.light {
     color: #000;
+
     .position-sticky {
       background-color: rgba(225, 225, 225, 0.75);
     }
+
     .primary {
       color: #000;
     }
