--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -61,13 +61,13 @@
 
           &:nth-child(1) {
             color: transparent;
-            -webkit-text-stroke: 2px rgba(171, 139, 101, 1);
+            -webkit-text-stroke: 2px rgba(299, 137, 28, 1);
           }
 
           &:nth-child(2) {
             top: 0;
             position: absolute;
-            color: rgb(202, 164, 117);
+            color: rgba(299, 137, 28, 1);
             animation: animate 4s ease-in-out infinite;
           }
         }
@@ -98,8 +98,8 @@
 
         &:hover {
           h2 {
-            -webkit-text-stroke: none;
-            color: rgb(202, 164, 117);
+            -webkit-text-stroke: 0.012em rgba(299, 137, 28, 1);
+            color: rgba(299, 137, 28, 1);
 
             &::after {
               opacity: 1;
@@ -118,7 +118,7 @@
             position: absolute;
             left: 0;
             top: 0;
-            -webkit-text-stroke: 0.012em rgb(202, 164, 117);
+            -webkit-text-stroke: 0.012em rgba(299, 137, 28, 1);
             color: transparent;
             opacity: 0;
             transition: opacity 0.5s ease;
@@ -325,7 +325,7 @@
 }
 
 input:checked+.switch-left {
-  background-color: rgb(202, 164, 117);
+  background-color: rgba(299, 137, 28, 1);
   color: #fff;
   bottom: 0px;
   left: 0.5em;
