--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,21 +3,63 @@
 
   .container {
     margin-top: 5rem;
+    position: relative;
 
     .image-block {
-      img {
-        width: 320px;
-        filter: grayscale(1);
-        border-radius: 75px 75px 0px 75px;
-        transition: 500ms;
-        // box-shadow: 0px 30px 50px -50px transparent;
-        border: 2px solid transparent;
+      // img {
+      //   width: 320px;
+      //   filter: grayscale(1);
+      //   border-radius: 75px 75px 0px 75px;
+      //   transition: 500ms;
+      //   // box-shadow: 0px 30px 50px -50px transparent;
+      //   border: 2px solid transparent;
 
-        &:hover {
-          filter: grayscale(0.25);
-          box-shadow: 0px 0px 50px -40px #fff;
-          border-color: #fff;
+      //   &:hover {
+      //     filter: grayscale(0.25);
+      //     box-shadow: 0px 0px 50px -40px #fff;
+      //     border-color: #fff;
+      //   }
+      // }
+      &:hover {
+        .photo-frame {
+          img {
+            width: 320px;
+
+            &:nth-child(1) {
+              border-radius: 75px 75px 0px 75px;
+              margin-left: -50px;
+              box-shadow: 30px 15px 50px -30px #000;
+            }
+
+            &:nth-child(2) {
+              left: 200px;
+              transform: scale(1, 1);
+            }
+          }
         }
+      }
+
+      .photo-frame {
+
+        img {
+          transition: 500ms;
+          width: 320px;
+
+          &:nth-child(1) {
+            border-radius: 75px 75px 0px 75px;
+
+          }
+
+          &:nth-child(2) {
+            position: absolute;
+            left: 40px;
+            top: 20px;
+            z-index: -1;
+            transform: scale(0, 0);
+          }
+        }
+
+
       }
 
       p {
@@ -149,7 +191,7 @@
       }
 
       p.caption {
-        color: #cccccc;
+        color: #fff;
       }
     }
 
