--- a/src/components/Story/story.scss
+++ b/src/components/Story/story.scss
@@ -53,7 +53,7 @@
   .btn {
     border: none;
     box-shadow: none;
-    border-radius: 15px;
+    border-radius: 0px;
     padding: 10px 20px;
 
     &.btn-outline-primary {
@@ -61,7 +61,7 @@
 
       &:hover {
         color: #000000;
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(299, 137, 28, 1)
       }
     }
   }
