--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -36,15 +36,7 @@
 		width: 100vw;
 		height: 100vh;
 		object-fit: cover;
-	}
-
-	.backdrop {
-		// background: rgba(299, 137, 28, 1);
-		height: inherit;
-		backdrop-filter: brightness(1);
-		animation: blurring infinite 10s;
-		-webkit-animation: blurring infinite 10s;
-		-moz-animation: blurring infinite 10s;
+		filter: brightness(0.7);
 	}
 
 	.container {
@@ -75,7 +67,7 @@
 
 	h1 {
 		font-family: 'Haskoy';
-		filter: drop-shadow(5px 4px 2px rgba(299, 137, 28, 1));
+		filter: drop-shadow(5px 4px 0px rgba(299, 137, 28, 1));
 		font-weight: 900;
 		font-size: 4rem;
 		letter-spacing: 0.3rem;
@@ -142,5 +134,13 @@
 
 	100% {
 		backdrop-filter: brightness(1);
+	}
+}
+
+.dark {
+	.banner {
+		.img-over-text {
+			// filter: drop-shadow(30px 30px 0px #000);
+		}
 	}
 }
