--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -10,16 +10,16 @@
     color: #fff;
     background: transparent;
     transition: 200ms;
+    height: 400px;
+    border-radius: 20px;
+    background-position: center;
+    background-size: cover;
 
     &:hover {
       .card-body {
         opacity: 1;
-        backdrop-filter: blur(2px);
+        backdrop-filter: blur(5px);
       }
-    }
-
-    img {
-      border-radius: 20px;
     }
 
     .card-body {
