--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,9 @@
 .footer {
   padding: 4rem 0rem;
   text-align: center;
-
+  position: relative;
+  z-index: 1;
+  background-color: rgba(299, 137, 28, 1);
   .name-logo {
     width: 24rem;
     margin-top: 1rem;
@@ -13,7 +15,6 @@
 
   h4 {
     a {
-      color: #848484;
       font-size: 3rem;
       padding: 15px 2rem;
 
@@ -21,7 +22,7 @@
         transition: 200ms;
 
         &:hover {
-          color: rgba(299, 137, 28, 1);
+          // color: rgba(299, 137, 28, 1);
           transform: scale(1.4, 1.4);
         }
       }
@@ -31,8 +32,11 @@
 
 .dark {
   .footer {
-    background-color: rgba(34, 34, 34, 0.72);
-
+    h4 {
+      a {
+        color: #dfdfdf;
+      }
+    }
     .text-caption {
       color: #dfdfdf;
     }
@@ -41,8 +45,11 @@
 
 .light {
   .footer {
-    background-color: rgba(225, 225, 225, 0.5);
-
+    h4 {
+      a {
+        color: rgba($color: #000000, $alpha: 1);
+      }
+    }
     .text-caption {
       color: rgba($color: #000000, $alpha: 1);
     }
