--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 .about {
   min-height: 100vh;
 
@@ -34,6 +35,7 @@
             &:nth-child(2) {
               left: 200px;
               transform: scale(1, 1);
+              filter: drop-shadow(5px 0px 0px rgba(299, 137, 28, 1));
             }
           }
         }
@@ -81,6 +83,10 @@
     }
 
     .blockquote {
+      h1 {
+        font-family: 'Sacramento', cursive;
+        font-size: 5rem;
+      }
       p {
         font-size: 3rem;
         font-weight: 300;
@@ -186,6 +192,21 @@
 .dark {
   .container {
     .image-block {
+      &:hover {
+        .blockquote {
+          h1 {
+            text-shadow:
+              0 0 7px #fff,
+              0 0 10px #fff,
+              0 0 21px #fff,
+              0 0 42px rgba(299, 137, 28, 1),
+              0 0 82px rgba(299, 137, 28, 1),
+              0 0 92px rgba(299, 137, 28, 1),
+              0 0 102px rgba(299, 137, 28, 1),
+              0 0 151px rgba(299, 137, 28, 1);
+          }
+        }
+      }
       p {
         color: #aaaaaa;
       }
