--- a/src/components/TimeLine/TimeLine.scss
+++ b/src/components/TimeLine/TimeLine.scss
@@ -14,7 +14,8 @@
         left: -50vw;
         top: 150px;
         width: 45vw;
-        height: 5px;
+        height: 3px;
+        border-radius: 1.5px;
       }
     }
 
@@ -25,7 +26,8 @@
         right: -50vw;
         top: 150px;
         width: 45vw;
-        height: 5px;
+        height: 3px;
+        border-radius: 1.5px;
       }
     }
 
@@ -38,7 +40,7 @@
         .media-left {
           img {
             filter: grayscale(0);
-            box-shadow: 0px 0px 0px 20px rgba(299, 137, 28, 1);
+            // box-shadow: 0px 0px 0px 20px rgba(299, 137, 28, 1);
           }
         }
 
@@ -129,9 +131,8 @@
       .media {
         &:hover {
           .media-left {
-            svg {
-              transform: rotate(-10deg);
-              color: rgba(299, 137, 28, 1);
+            img {
+              box-shadow: 0px 0px 0px 20px rgba(299, 137, 28, 1);
             }
           }
 
@@ -154,6 +155,7 @@
 
         .media-body {
           h1 {
+            &:first-child{text-shadow: 3px 3px 0px #eee;}
             &:nth-child(2) {
               &::before {
                 box-shadow: inset 0 0 10px 100px rgba($color: #898989, $alpha: 1);
@@ -171,22 +173,44 @@
     .content {
       &.left {
         &::before {
-          background-color: #555;
+          background-color: #fff;
+          box-shadow:
+              0 0 7px #fff,
+              0 0 10px #fff,
+              0 0 21px #fff,
+              0 0 42px rgba(299, 137, 28, 1),
+              0 0 82px rgba(299, 137, 28, 1),
+              0 0 92px rgba(299, 137, 28, 1),
+              0 0 102px rgba(299, 137, 28, 1),
+              0 0 151px rgba(299, 137, 28, 1);
         }
       }
 
       &.right {
         &::before {
-          background-color: #555;
+          background-color: #fff;
+          box-shadow:
+              0 0 7px #fff,
+              0 0 10px #fff,
+              0 0 21px #fff,
+              0 0 42px rgba(299, 137, 28, 1),
+              0 0 82px rgba(299, 137, 28, 1),
+              0 0 92px rgba(299, 137, 28, 1),
+              0 0 102px rgba(299, 137, 28, 1),
+              0 0 151px rgba(299, 137, 28, 1);
         }
       }
 
       .media {
         &:hover {
           .media-left {
-            svg {
-              transform: rotate(-10deg);
-              color: rgba(299, 137, 28, 1);
+            img {
+              box-shadow: 0 0 .2rem #fff,
+                0 0 .2rem #fff,
+                0 0 2rem rgba(299, 137, 28, 1),
+                0 0 0.8rem rgba(299, 137, 28, 1),
+                0 0 2.8rem rgba(299, 137, 28, 1),
+                inset 0 0 1.3rem rgba(299, 137, 28, 1);
             }
           }
 
@@ -209,6 +233,7 @@
 
         .media-body {
           h1 {
+            &:first-child{text-shadow: 3px 3px 0px #222;}
             &:nth-child(2) {
               &::before {
                 box-shadow: inset 0 0 10px 100px rgba($color: #555, $alpha: 1);
