--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -16,14 +16,13 @@
 	.img-over-text {
 		font-size: 100vh;
 		position: absolute;
-		top: -180px;
+		top: 50px;
 		left: 0;
+		line-height: 100vh;
 		background-image: url('./../../assets/images/banner.webp');
 		background-size: cover;
-		background-position: bottom;
 		background-attachment: fixed;
 		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
 		text-transform: uppercase;
 		z-index: 0;
 	}
@@ -155,8 +154,18 @@
 
 .dark {
 	.banner {
+		background-color: #000000;
 		.img-over-text {
-			// filter: drop-shadow(30px 30px 0px #000);
+			-webkit-text-fill-color: rgba(0, 0, 0, 0.4);
+		}
+	}
+}
+
+.light {
+	.banner{
+		background-color: #eee;
+		.img-over-text {
+			-webkit-text-fill-color: rgba(299, 137, 28, 0.2);
 		}
 	}
 }
