--- a/src/index.scss
+++ b/src/index.scss
@@ -50,14 +50,20 @@
 body {
   margin: 0;
   padding: 0;
-  // font-family: "Roboto";
-  font-family: 'Anybody', cursive;
+  font-family: "Haskoy";
+  // font-family: 'Anybody', cursive;
   font-weight: 300;
   letter-spacing: 0.05em;
   -webkit-font-smoothing: antialiased;
   /* -moz-osx-font-smoothing: grayscale; */
   overflow-x: hidden;
   background-color: #f5f5f5;
+  font-size: large;
+}
+
+.primary {
+  font-weight: bold;
+  color: rgba(299, 137, 28, 1);
 }
 
 #root>div {
@@ -83,10 +89,6 @@ body {
     .position-sticky {
       background-color: rgba(34, 34, 34, 0.95);
     }
-
-    .primary {
-      color: #ffffff;
-    }
   }
 
   &.light {
@@ -108,10 +110,6 @@ body {
 
     .position-sticky {
       background-color: rgba(225, 225, 225, 0.75);
-    }
-
-    .primary {
-      color: #000;
     }
   }
 }
