--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -66,6 +66,18 @@
 
       p {
         color: #aaaaaa;
+        ul {
+          li {
+            list-style: none;
+            margin: 7px 0px;
+            div {transition: 250ms;}
+            &:hover {
+              div {
+                transform: scale(1.4);
+              }
+            }
+          }
+        }
       }
 
       p.caption {
@@ -102,11 +114,12 @@
 
       .block {
         position: relative;
-        margin-bottom: 9rem;
-
+        display: flex;
+        justify-content: center;
         h2 {
           font-size: 8em;
-
+          font-family: 'Anybody', cursive;
+          margin-bottom: 0;
           &:nth-child(1) {
             color: transparent;
             -webkit-text-stroke: 2px rgba(299, 137, 28, 1);
@@ -117,6 +130,49 @@
             position: absolute;
             color: rgba(299, 137, 28, 1);
             animation: animate 4s ease-in-out infinite;
+          }
+        }
+      }
+      .logo-group{
+        // position: relative;
+        // z-index: 1;
+        // &::before {
+        //   position: absolute;
+        //   z-index: -1;
+        //   content: " ";
+        //   background-color: rgba(299, 137, 28, 1);
+        //   width: 300px;
+        //   height: 4px;
+        //   bottom: 23px;
+        // }
+        display: flex;
+        gap: 100px;
+        justify-content: center;
+        margin-bottom: 9rem;
+        .logo {
+          margin-top: 3rem;
+          margin-bottom: 10px;
+          transition: 250ms;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          .caption {
+            display: none;
+          }
+          img{
+            height: 20px;
+          }
+          &:hover {
+            transform: scale(8);
+            .caption {
+              display: block;
+              font-size: 3px;
+              max-width: 30px;
+              text-align: center;
+            }
+            img {
+              filter: drop-shadow(0px 0px 7px rgba(299, 137, 28, 1));
+            }
           }
         }
       }
