--- a/src/components/TimeLine/TimeLine.scss
+++ b/src/components/TimeLine/TimeLine.scss
@@ -6,9 +6,14 @@
     color: #aaaaaa;
   }
 
+  .container {
+    position: relative;
+  }
+
   .content {
+    z-index: 1;
     &.left {
-      &::before {
+      &::after {
         content: "";
         position: absolute;
         left: -50vw;
@@ -34,9 +39,21 @@
     margin: 10rem 0rem;
 
     .media {
+      transition: 200ms;
       align-items: center;
 
+      .media-body {
+        h1 {
+          &:nth-child(2) {
+            &::before {
+              box-shadow: inset 0 0 10px 100px rgba(299, 137, 28, 1);
+            }
+          }
+        }
+      }
+
       &:hover {
+        transform: scale(1.1);
         .media-left {
           img {
             filter: grayscale(0);
@@ -44,15 +61,7 @@
           }
         }
 
-        .media-body {
-          h1 {
-            &:nth-child(2) {
-              &::before {
-                box-shadow: inset 0 0 10px 100px rgba(299, 137, 28, 1);
-              }
-            }
-          }
-        }
+        
       }
 
       .media-left {
@@ -103,9 +112,6 @@
     }
 
     p {
-      font-size: 1.1rem;
-      color: #959595;
-
       a {
         color: #959595;
       }
@@ -123,7 +129,7 @@
       }
 
       &.right {
-        &::before {
+        &::after {
           background-color: #898989;
         }
       }
@@ -133,16 +139,6 @@
           .media-left {
             img {
               box-shadow: 0px 0px 0px 20px rgba(299, 137, 28, 1);
-            }
-          }
-
-          .media-body {
-            h1 {
-              &:nth-child(2) {
-                &::before {
-                  box-shadow: inset 0 0 10px 100px rgba(299, 137, 28, 1);
-                }
-              }
             }
           }
         }
@@ -156,11 +152,6 @@
         .media-body {
           h1 {
             &:first-child{text-shadow: 3px 3px 0px #eee;}
-            &:nth-child(2) {
-              &::before {
-                box-shadow: inset 0 0 10px 100px rgba($color: #898989, $alpha: 1);
-              }
-            }
           }
         }
       }
@@ -187,7 +178,7 @@
       }
 
       &.right {
-        &::before {
+        &::after {
           background-color: #fff;
           box-shadow:
               0 0 7px #fff,
@@ -213,16 +204,6 @@
                 inset 0 0 1.3rem rgba(299, 137, 28, 1);
             }
           }
-
-          .media-body {
-            h1 {
-              &:nth-child(2) {
-                &::before {
-                  box-shadow: inset 0 0 10px 100px rgba(299, 137, 28, 1);
-                }
-              }
-            }
-          }
         }
 
         .media-left {
@@ -234,11 +215,6 @@
         .media-body {
           h1 {
             &:first-child{text-shadow: 3px 3px 0px #222;}
-            &:nth-child(2) {
-              &::before {
-                box-shadow: inset 0 0 10px 100px rgba($color: #555, $alpha: 1);
-              }
-            }
           }
         }
       }
