--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,8 @@
   font-weight: 600;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@800;900&family=Croissant+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anybody:wght@800;900');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
 body {
   margin: 0;
