--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -74,22 +74,24 @@
 	}
 
 	h1 {
-		font-family: 'Croissant One';
-		text-shadow: 0.5px 0.5px 0px rgba(299, 137, 28, 1),
-			1.1px 1.1px 0px rgba(299, 137, 28, 1),
-			1.2px 1.2px 0px rgba(299, 137, 28, 1),
-			1.3px 1.3px 0px rgba(299, 137, 28, 1),
-			1.4px 1.4px 0px rgba(299, 137, 28, 1),
-			1.5px 1.5px 0px rgba(299, 137, 28, 1),
-			1.6px 1.6px 0px rgba(299, 137, 28, 1),
-			1.7px 1.7px 0px rgba(299, 137, 28, 1),
-			1.8px 1.8px 0px rgba(299, 137, 28, 1);
-		font-weight: 900;
+		font-family: "Luckiest Guy", cursive;
+		// text-shadow: 0.5px 0.5px 0px rgba(299, 137, 28, 1),
+		// 	1.1px 1.1px 0px rgba(299, 137, 28, 1),
+		// 	1.2px 1.2px 0px rgba(299, 137, 28, 1),
+		// 	1.3px 1.3px 0px rgba(299, 137, 28, 1),
+		// 	1.4px 1.4px 0px rgba(299, 137, 28, 1),
+		// 	1.5px 1.5px 0px rgba(299, 137, 28, 1),
+		// 	1.6px 1.6px 0px rgba(299, 137, 28, 1),
+		// 	1.7px 1.7px 0px rgba(299, 137, 28, 1),
+		// 	1.8px 1.8px 0px rgba(299, 137, 28, 1);
+		// font-weight: 900;
 		font-size: 4rem;
-		letter-spacing: -2px;
-		color: #000000;
+		letter-spacing: 2px;
 		word-break: break-all;
 		margin-bottom: 15px;
+		background: -webkit-linear-gradient(45deg , #FF891C, #CC703F, #985761, #653E84, #3124A6);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
 	}
 
 	.btn-secondary {
