--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -156,22 +156,28 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          position: relative;
           .caption {
-            display: none;
+            color: rgba(299, 137, 28, 1);
+            transition: inherit;
+            position: absolute;
+            opacity: 0;
+            font-size: 23px; 
+            font-weight: 500;
+            bottom: -80px;
+            width: 200px;
+            text-align: center;
           }
           img{
-            height: 20px;
+            height: 160px;
+            transition: 250ms;
           }
           &:hover {
-            transform: scale(8);
             .caption {
-              display: block;
-              font-size: 3px;
-              max-width: 30px;
-              text-align: center;
+              opacity: 1;
             }
             img {
-              filter: drop-shadow(0px 0px 7px rgba(299, 137, 28, 1));
+              filter: drop-shadow(0px 0px 54px rgba(299, 137, 28, 1));
             }
           }
         }
