--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anybody:wght@800;900');
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carattere&display=swap');
 
 body {
   margin: 0;
