--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+// import img from "./../../assets/images/scr.webp";
+// import gtaImg from "./../../assets/images/scr-gta.webp";
+
 .about {
   min-height: 100vh;
 
@@ -7,58 +10,48 @@
     position: relative;
 
     .image-block {
-      // img {
-      //   width: 320px;
-      //   filter: grayscale(1);
-      //   border-radius: 75px 75px 0px 75px;
-      //   transition: 500ms;
-      //   // box-shadow: 0px 30px 50px -50px transparent;
-      //   border: 2px solid transparent;
-
-      //   &:hover {
-      //     filter: grayscale(0.25);
-      //     box-shadow: 0px 0px 50px -40px #fff;
-      //     border-color: #fff;
-      //   }
-      // }
       &:hover {
         .photo-frame {
+          .dp {
+            border-radius: 75px 75px 0px 75px;
+            margin-left: 0px;
+            box-shadow: 30px 15px 50px -30px #000;
+          }
           img {
             width: 320px;
-
-            &:nth-child(1) {
-              border-radius: 75px 75px 0px 75px;
-              margin-left: -50px;
-              box-shadow: 30px 15px 50px -30px #000;
-            }
-
-            &:nth-child(2) {
-              left: 200px;
-              transform: scale(1, 1);
-              filter: drop-shadow(5px 0px 0px rgba(299, 137, 28, 1));
-            }
+            left: 150px;
+            height: 480px;
+            transform: scale(1, 1);
+            filter: drop-shadow(5px 0px 0px rgba(299, 137, 28, 1));
           }
         }
       }
 
       .photo-frame {
-
+        position: relative;
+        .dp {
+          transition: 250ms;
+          width: 320px;
+          height: 480px;
+          background-image: url('../../assets/images/scr-gta.webp');
+          background-size: cover;
+          background-position: center;
+          border-radius: 75px 75px 0px 75px;
+          &:hover {
+            background-position: center;
+            filter: brightness(0.8) contrast(1.3);
+            background-image: url('../../assets/images/scr.webp');
+          }
+        }
         img {
           transition: 500ms;
           width: 320px;
-
-          &:nth-child(1) {
-            border-radius: 75px 75px 0px 75px;
-
-          }
-
-          &:nth-child(2) {
-            position: absolute;
-            left: 40px;
-            top: 20px;
-            z-index: -1;
-            transform: scale(0, 0);
-          }
+          height: 480px;
+          position: absolute;
+          left: 40px;
+          top: 20px;
+          z-index: -1;
+          transform: scale(0, 0);
         }
 
 
