--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -75,7 +75,7 @@
 	}
 
 	h1 {
-		font-family: "Luckiest Guy", cursive;
+		font-family: "Raleway";
 		// text-shadow: 0.5px 0.5px 0px rgba(299, 137, 28, 1),
 		// 	1.1px 1.1px 0px rgba(299, 137, 28, 1),
 		// 	1.2px 1.2px 0px rgba(299, 137, 28, 1),
@@ -85,8 +85,8 @@
 		// 	1.6px 1.6px 0px rgba(299, 137, 28, 1),
 		// 	1.7px 1.7px 0px rgba(299, 137, 28, 1),
 		// 	1.8px 1.8px 0px rgba(299, 137, 28, 1);
-		// font-weight: 900;
-		font-size: 4rem;
+		font-weight: 700;
+		font-size: 5rem;
 		letter-spacing: 2px;
 		word-break: break-all;
 		margin-bottom: 15px;
