--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -37,6 +37,7 @@
           background-size: cover;
           background-position: center;
           border-radius: 75px 75px 0px 75px;
+          margin-left: 20px;
           &:hover {
             background-position: center;
             filter: brightness(0.8) contrast(1.3);
@@ -91,6 +92,7 @@
       h1 {
         font-family: 'Sacramento', cursive;
         font-size: 5rem;
+        // color: rgba(299, 137, 28, 1);
       }
       p {
         font-size: 3rem;
@@ -251,8 +253,8 @@
         .blockquote {
           h1 {
             text-shadow:
-              0 0 7px #fff,
-              0 0 10px #fff,
+              // 0 0 7px #fff,
+              // 0 0 10px #fff,
               0 0 21px #fff,
               0 0 42px rgba(299, 137, 28, 1),
               0 0 82px rgba(299, 137, 28, 1),
