--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -54,8 +54,9 @@
 				position: relative;
 				z-index: 2;
 				padding: 30px;
-				border-radius: 0px;
-				backdrop-filter: blur(50px);
+				border-radius: 30px 0px 0px 0px;
+				backdrop-filter: blur(30px);
+				border-right: 10px solid rgba(299, 137, 28, 1);
 			}
 		}
 
