--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -19,10 +19,16 @@
   transition: 500ms;
   right: 0;
   bottom: 0;
+  border-radius: 30px 0px 0px;
   padding: 15px 15px 10px;
-
+  .rocker {
+    transition: 200ms;
+    height: 0em;
+  }
   &:hover {
-    background-color: rgba(299, 137, 28, 1);
+    .rocker {
+      height: 4em;
+    }
   }
 }
 
