--- a/src/components/WorkTraces/WorkTraces.scss
+++ b/src/components/WorkTraces/WorkTraces.scss
@@ -61,6 +61,25 @@
           width: 100%;
           justify-content: space-between;
         }
+
+        .projects {
+          font-size: 18px;
+          margin-top: 20px;
+          display: flex;
+          gap: 10px;
+          justify-content: space-evenly;
+          padding-bottom: 40px;
+          div {
+            padding: 10px 15px;
+            border-radius: 15px;
+            &:hover{
+              transform: scale(1.5);
+              transition: 200ms;
+              font-weight: 500;
+              background-color: rgba(299, 137, 28, 1);
+            }
+          }
+        }
       }
 
       .media-right {
@@ -95,4 +114,42 @@
 
 .animate__animated.animate__fadeInUp {
   --animate-duration: 0.125s;
+}
+
+.light {
+  .work-traces {
+    .company {
+      .company-info {
+        .wrapper {
+          .projects {
+            div {
+              color: #000;
+              &:hover{
+                box-shadow: 2px 2px 0px #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.dark {
+  .work-traces {
+    .company {
+      .company-info{
+        .wrapper {
+          .projects {
+            div {
+              color: #fff;
+              &:hover {
+                  box-shadow: 2px 2px 0px #000;
+                }
+            }
+          }
+        }
+      }
+    }
+  }
 }
