--- a/src/components/WorkTraces/WorkTraces.scss
+++ b/src/components/WorkTraces/WorkTraces.scss
@@ -59,12 +59,14 @@
           padding: 0px 20px;
           display: flex;
           width: 100%;
+          font-weight: 600;
           justify-content: space-between;
         }
 
         .projects {
+          position: relative;
           font-size: 18px;
-          margin-top: 20px;
+          margin-top: 30px;
           display: flex;
           gap: 10px;
           justify-content: space-evenly;
