--- a/src/components/ChatLine/ChatLine.scss
+++ b/src/components/ChatLine/ChatLine.scss
@@ -69,6 +69,10 @@
                     margin-bottom: 0px;
                 }
             }
+
+            &:last-child {
+                margin-bottom: 100px;
+            }
         }
 
         .revealed {
