--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,6 +4,11 @@
   margin-bottom: 0px;
 }
 
+.media {
+  display: flex;
+  position: relative;
+}
+
 .position-sticky {
   /* position: sticky !important; */
   top: 0;
